# rst_caller

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  US_Bb_K2_Yun_3_renamed.fasta  eztest.sh  pyproject.toml  refresh.sh  todo.md
notebooks/: digitize_in_vitro_rflp.ipynb  old_metadata.tsv  rst_caller_test.tsv
notes/: todo.md
src/rst_caller/: __about__.py  main.py  rst_caller.py
src/rst_caller/test_seqs/: EU_Bb_01.gbff
test_out/: FRAGMENT_LENGTHS.txt
test_seqs/: B31_chrom.fasta  EU_Bb_01.fna  GCA_000181575.2_ASM18157v2_genomic.fna  GCA_002151485.1_ASM215148v1_genomic.fna  GCF_000008685.2_ASM868v2.gbff  GCF_000008685.2_ASM868v2_genomic.fna
